RESOLVED FIXED127121
Log an error for a common cause of WebProcess early launch crashing in misconfigured development builds
https://bugs.webkit.org/show_bug.cgi?id=127121
Summary Log an error for a common cause of WebProcess early launch crashing in miscon...
Simon Fraser (smfr)
Reported 2014-01-16 10:32:49 PST
Log an error for a common cause of WebProcess early launch crashing in misconfigured development builds
Attachments
Patch (2.25 KB, patch)
2014-01-16 10:34 PST, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2014-01-16 10:34:20 PST
Simon Fraser (smfr)
Comment 2 2014-01-21 12:21:48 PST
Note You need to log in before you can comment on or make changes to this bug.